--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
  <body> 
      <div class="business-card"> 
          <div class="profile-picture"> 
-            <img src="DSC09866.JPG" alt="Enric S N"> 
+            <img src="IMG_20220511_203407_531 (2).jpg" alt="Enric S N"> 
          </div> 
          <div class="info"> 
              <h1>Enric S Neelamkavil</h1> 
