--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
             <img src="IMG_20220511_203407_531 (2).jpg" alt="Enric S N"> 
          </div> 
          <div class="info"> 
-             <h1>Enric S Neelamkavil</h1> 
-             <p>CEO, fun design</p> 
-             <p>Email: enrics@salooms.org</p> 
-             <p>Phone: +91 94007 43624 </p> 
-             <p>Website:www.enricsneelamkavil.in</p> 
+             <h1>Amal C P</h1> 
+             <p>CTO, fun design</p> 
+             <p>Email: amalcpaulson@gmail.com</p> 
+             <p>Phone: +91 7994043754 </p> 
+             <p>Website:www.amalcp.vercel.app</p> 
          </div> 
      </div> 
  </body> 
